--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
-﻿<!doctype html> 
-<!-- saved from url=(0044)https://ruhuasiyu.github.io/CraftingPlusPlus -->
+﻿<!doctype html>
 <html lang="zh-cmn-Hans">
 <head>
 <meta charset="utf-8" />
@@ -47,22 +46,14 @@
 
 <!-------------------------------------------------------------------------------------------------->
 <h2 id="introduction">简介</h2>
-<!--
-<div style="width:50%;margin:20px auto;padding:2px;border-color:#373737 #FFF #FFF #373737; border:2px solid blue;">
-<div style="padding:2px;border-color:#373737 #FFF #FFF #373737; border:2px solid blue;">
-<p style="color:red;font-weight:bold;text-align:center;vertical-align:middle;">目前模组开发急需材质作者，如有意向请<a href="http://www.mcbbs.net/home.php?mod=spacecp&ac=pm&touid=975525">联系我</a>。</p>
-</div></div>-->
-
 <p style="color:red">🎉欢迎来到原版模组《更多的合成》主页！</p>
-
 <p>原版模组一般是指使用命令而非<abbr title="forge liteloader rift fibric 等">mod api</abbr>来对游戏的可玩性做出修改。自1.13起，原版模组一般以数据包的形式出现。</p>
-
-<p>《更多的合成》是国内论坛最大的原版模组，包括数百种物品、材料、工具、装饰等，以及新的村民交易和空岛系统。该模组无明确的主题，凡是作者认为原版没有而应该有的特性都有可能加入进来。</p>
-<p>最新版本为测试版v1.9-m04d22(魔法更新)，支持Minecraft Java版 1.14快照19w12a+。</p>
+<p>《更多的合成》是国内论坛最大的原版模组，包括数百种物品、材料、工具、装饰等，以及新的村民交易和空岛系统。</p>
+<p>最新版本为v1.9，即“魔法更新”，于2019年4月30日发布。该版本开始支持Minecraft 1.14版本。此次更新添加了魔杖的魔法效果，对大量模组物品和方块材质进行了重新绘制，同时也添加了很多实用工具、食物、装饰和药水。具体来说，加入了物品处理机、剪枝器、玻璃镐、搬箱器、垃圾桶、旗帜、标志、汉堡、披萨、寿司、仰望星空派、水果、葡萄干等，以及重新设计花草和空岛。此次更新也加入了获取物品的便捷方式，优化了大量指令，加入了很多可自动化的内容。</p>
 
 
 <h3 id="download">📦 下载地址</h3>
-<p>本页面所列内容为1.9测试版本。不建议玩家使用旧版本，同时新版本放出后，旧版本一律不再更新和修复bug。</p>
+<p>本页面所列内容为1.9版本。不建议玩家使用旧版本，同时新版本放出后，旧版本一律不再更新和修复bug。</p>
 <ul>
 	<li><a href="http://home.ustc.edu.cn/~zsxqq/craftingpp">官方主页</a></li>
 	<li><a href="http://www.mcbbs.net/thread-696861-1-1.html">mcbbs中文论坛页面</a></li>
@@ -75,13 +66,8 @@
 <tr>
 	<td>Minecraft Java版 1.14</td>
 	<td>Crafting++ 1.9</td>
-	<td>尚未发布</td>
-</tr>
-<tr>
-	<td>Minecraft Java版 19w12a+</td>
-	<td>Crafting++ 1.9测试版m04d22</td>
-	<td><a href="https://github.com/ruhuasiyu/CraftingPlusPlus/releases/tag/v1.9-m04d22">github</a>
-	  | <a href="http://home.ustc.edu.cn/~zsxqq/craftingpp/v1.9-m04d22.zip">官方</a></td>
+	<td><a href="https://github.com/ruhuasiyu/CraftingPlusPlus/releases/tag/v1.9">github</a>
+	  | <a href="http://home.ustc.edu.cn/~zsxqq/craftingpp/v1.9.zip">官方</a></td>
 </tr>
 <tr>
 	<td>Minecraft Java版 1.13.1-1.13.2</td>
@@ -97,7 +83,7 @@
 <p>广告：欢迎加入挼苹果服，QQ群号885244850。</p>
 
 <h4>模组入门</h4>
-<p>大部分合成需使用<a href="#crafting_machine"><img src="items/crafting_machine.png" style="height:20px;" />合成器</a>。模组需要的附魔之瓶可通过副手持有漏斗获取。</p>
+<p>大部分合成需使用<a href="#crafting_machine"><span class="ui single"><span class="ci crafting_machine"></span></span>合成器</a>。模组需要的附魔之瓶可通过副手持有漏斗获取。</p>
 <p>部分参数可通过<a href="#config">配置文件</a><code>datapacks/craftingpp/data/cpp/functions/config.mcfunction</code>修改。模组支持英文、简体中文、繁体中文三种语言。如有任何意见建议，欢迎<a href="http://www.mcbbs.net/thread-696861-1-1.html">在论坛回复</a>、<a href="https://github.com/ruhuasiyu/craftingpp/issues/new">发起issue</a>或<a href="http://www.mcbbs.net/home.php?mod=spacecp&ac=pm&touid=975525">私信我</a>，请在反馈时提供游戏版本和模组版本。</p>
 
 <h4>注意事项</h4>
@@ -115,7 +101,7 @@
 
 <h3 id="acknowledge">👷 制作者名单</h3>
 <p><span style="font-weight:bold;">数据包设计</span>：ruhuasiyu</p>
-<p><span style="font-weight:bold;">资源包设计</span>：ruhuasiyu RubberTree 折君 XeKr 天狼星black MC先生</p>
+<p><span style="font-weight:bold;">资源包设计</span>：ruhuasiyu RubberTree XeKr 折君 天狼星black MC先生</p>
 <p><span style="font-weight:bold;">服务器支持</span>：HerobrineXia SorrowRain 苹果果</p>
 <p><span style="font-weight:bold;">平台支持</span>：<a href="https://www.mcbbs.net/">Minecraft(我的世界)中文论坛</a> <a href="https://www.mcmod.cn/">MC百科</a> </p>
 <p><span style="font-weight:bold;">赞助名单</span>：<span style="color:blue;">一米八微笑 明月庄主 Rhythm萱 LIXIAOGANG 墨鱼 uuu2011 火星浮云 匿名 这是彩虹糖呢 倪采臣 SPGoding ustc_zzzz 苹果果 落天望月 猫君 chyx switefaster</span></p>
@@ -162,7 +148,7 @@
 · <a href="#dead_coral_fan">死珊瑚扇</a> 
 · <a href="#small_bush">灌木丛</a> 
 · <a href="#dead_spruce">死云杉树</a> 
-· <a href="#field">农作物</a> 
+· <a href="#field">作物田</a> 
 · <a href="#flowers_and_grasses_bushes">花草丛</a> 
 </td></tr>
 
@@ -467,11 +453,11 @@
 <img style="height:400px" src="items/screenshots/totem_pillar.png" />
 
 <h3 id="fruit_tree">水果树 (Fruit Tree)</h3>
-<p>天然生成在主世界的地表。水果树的形状与桦树相同，树干为橡木。</p>
+<p>天然生成在主世界的地表土质方块上。水果树的形状与桦树相同，树干为橡木。</p>
 <h3 id="ore_tree">矿石树 (Ore Tree)</h3>
-<p>天然生成在主世界的地表。矿石树的形状与桦树相同，树干为云杉木。</p>
+<p>天然生成在主世界的地表土质方块上。矿石树的形状与桦树相同，树干为云杉木。</p>
 <h3 id="wool_tree">羊毛树 (Wool Tree)</h3>
-<p>天然生成在主世界的地表。羊毛树的形状与桦树相同，树干为桦木。</p>
+<p>天然生成在主世界的地表土质方块上。羊毛树的形状与桦树相同，树干为桦木。</p>
 
 <img style="height:350px" src="items/screenshots/fruit_tree.png" />
 <img style="height:350px" src="items/screenshots/ore_tree.png" />
@@ -481,16 +467,16 @@
 <p>天然生成在沙漠或恶地地表，包含5种死珊瑚扇。</p>
 
 <h3 id="small_bush">灌木丛 (Small Bush)</h3>
-<p>天然生成在主世界的地表草方块上，由一块橡木和若干橡树树叶构成。</p>
+<p>天然生成在主世界的地表土质方块上，由一块橡木和若干橡树树叶构成。</p>
 
 <h3 id="dead_spruce">死云杉树 (Dead Spruce)</h3>
 <p>天然生成在针叶林地表，由云杉木和若干云杉树叶构成。</p>
 
-<h3 id="field">农作物 (Field)</h3>
+<h3 id="field">作物田 (Field)</h3>
 <p>天然生成在主世界的地表，为小麦、马铃薯、胡萝卜或甜菜根作物形成的一丛。</p>
 
 <h3 id="flowers_and_grasses_bushes">花草丛 (Flowers and Grasses Bushes)</h3>
-<p>天然生成在主世界的地表草方块上，为任意一种花草形成的一丛。</p>
+<p>天然生成在主世界的地表土质方块上，为任意一种花草形成的一丛。</p>
 
 <img style="height:190px" src="items/screenshots/dead_coral_fan.png" />
 <img style="height:190px" src="items/screenshots/small_bush.png" />
@@ -853,7 +839,7 @@
 <span class="ui single"><span class="ci item_processer"></span></span>
 <table><thead><tr><th>产物</th><th>材料</th><th>合成配方</th></tr></thead><tbody>
 <tr><th>物品处理机</th>
-<td><a href="#enchanted_iron">附魔铁锭</a>+合成器+木桶+红石+熔炉</td>
+<td><a href="#enchanted_iron">附魔铁锭</a>+工作台+木桶+红石+熔炉</td>
 <td><span class="ui cm" title="合成器">
 <span class="ci enchanted_iron" title="附魔铁锭"></span>
 <span class="crafting_table" title="工作台"></span>
@@ -1372,6 +1358,11 @@
 </span></span><a href="#heads"><span class="ui slot"><span class="skeleton_skull" title="骷髅头颅">
 </span></span></a><span class="ui slot"><span class="xp_orb" title="经验"><span class="stack">32</span></span></span></td></tr>
 
+<tr><td>熊猫</td><td><img src="https://gamepedia.cursecdn.com/minecraft_zh_gamepedia/3/33/PandaFace.png" title="熊猫" /></td><td><span class="ui slot"><span class="egg" title="鸡蛋">
+</span></span><span class="ui slot"><span class="bamboo" title="竹子">
+</span></span><a href="#heads"><span class="ui slot"><span class="skeleton_skull" title="骷髅头颅">
+</span></span></a><span class="ui slot"><span class="xp_orb" title="经验"><span class="stack">32</span></span></span></td></tr>
+
 
 </tbody></table>
 
@@ -1396,7 +1387,7 @@
 
 <img style="height:200px" src="items/screenshots/beacon_enhancer.png" />
 
-<p>需放置在信标顶部。左侧可选择对玩家生效的一种效果，右侧可选择对玩家外实体生效的一种效果，最右侧选择负面效果对敌对生物/所有生物生效。影响范围基于下方的信标等级，为半径=10*(等级+1)的球形区域。</p>
+<p>需放置在信标顶部。左侧可选择对玩家生效的一种效果，右侧可选择对玩家外实体生效的一种效果，最右侧选择负面效果对敌对生物/所有生物生效。影响范围基于下方的信标等级，为半径=10*(等级+1)的球形区域。对村民无效。</p>
 <p>若下方为4级信标，每秒恢复64米内玩家1点魔法值，上限60点。若信标矿物块塔的顶层为X形的5个日石和4个月石，则额外每秒恢复128米内玩家1点魔法值，上限100点。</p>
 <p>被强充能时停止工作。</p>
 <img style="height:400px" src="items/screenshots/sss.png" />
@@ -1441,7 +1432,6 @@
 <span class="ui single"><span class="ci empty_bookshelf6"></span></span>
 <span class="ui single"><span class="ci empty_bookshelf7"></span></span>
 <p>破坏书架掉落。拥有三格槽位，外观会随着内部物品数量而变化。若其中恰好放入了三本书，则会自动转变为书架。</p>
-<img style="height:200px" src="items/screenshots/bookshelf.png" />
 
 <h3 id="empty_plugin">空白插件 (Empty Plugin)</h3>
 <span class="ui single"><span class="ci empty_plugin"></span></span>
@@ -4371,7 +4361,7 @@
 </span></td></tr>
 
 <tr><th><strong id="garland">花环 (Garland)</strong><br/>
-<p>每10秒回复1点魔力值，上限30点。</p></th>
+<p>每10秒恢复玩家1点魔力值，上限30点。</p></th>
 <td>虞美人+蒲公英+木棍</td>
 <td><span class="ui cm" title="合成器">
 <span class="poppy" title="虞美人"></span>
@@ -4463,7 +4453,7 @@
 </span></td></tr>
 
 <tr><th><strong id="empire_hat">冕旒 (Empire Hat)</strong><br/>
-每10秒回复1点魔力值，上限100点。</th>
+每10秒恢复玩家1点魔力值，上限100点。</th>
 <td>黄色染料+末影珍珠+黄色床</td>
 <td><span class="ui cm" title="合成器">
 <span class="yellow_dye" title="黄色染料"></span>
@@ -4509,7 +4499,7 @@
 </span></td></tr>
 
 <tr><th><strong id="green_hat">原谅帽 (Green Hat)</strong><br/>
-每10秒回复1点魔力值，上限60点。</th>
+每10秒恢复玩家1点魔力值，上限60点。</th>
 <td>绿宝石</td>
 <td><span class="ui cm" title="合成器">
 <span class="emerald" title="绿宝石"></span>
@@ -4896,6 +4886,12 @@
 <span class="sticky_piston" title="粘性活塞"></span>
 <span class="piston" title="活塞"></span>
 </span></td></tr>
+
+<tr><th>混凝土</th><td>混凝土粉末</td>
+<td><span class="ui onetoone" title="炼药锅">
+<span class="black_concrete_powder" title="混凝土粉末"></span>
+<span class="black_concrete" title="混凝土"></span>
+</span></td></tr>
 </tbody></table>
 
 <h3 id="leaves_fast_decay">树叶快速腐烂</h3>
@@ -4926,11 +4922,6 @@
 <h3 id="vertical_blocks">竖纹方块</h3>
 <p>部分方块双台阶材质修改为竖纹。</p>
 <p><img style="height:160px" src="items/screenshots/vertical_blocks.png" /></p>
-
-<h3 id="vertical_slabs">竖台阶</h3>
-<p>墙名称和模型均修改为竖台阶。</p>
-<p><img style="height:200px" src="items/screenshots/vertical_slabs.png" /></p>
-
 
 <h3 id="nether_dry_wet_sponge">干燥湿海绵</h3>
 <p>湿海绵在下界可直接被干燥为海绵。</p>
@@ -5348,7 +5339,7 @@
 
 <footer>
 <p>
-<a href="http://home.ustc.edu.cn/~zsxqq/craftingpp/"><img src="items/crafting_machine.png" alt="官网" title="更多的合成" /></a>
+<a href="http://home.ustc.edu.cn/~zsxqq/craftingpp/" alt="官网" title="更多的合成"><span class="ui single"><span class="ci portable_crafting_machine"></span></span></a>
 <a href="http://www.mcbbs.net/thread-696861-1-1.html"><img src="http://www.mcbbs.net/template/mcbbs/image/logo_sc.png" alt="Mcbbs" title="Minecraft(我的世界)中文论坛"></a>
 <a href="https://www.mcmod.cn/class/1297.html"><img src="items/mcmod.png" alt="Mcbbs" title="MC百科"></a>
 <a href="https://github.com/ruhuasiyu/CraftingPlusPlus"><img src="items/github.png" alt="GitHub" title="github" /></a>
@@ -5358,7 +5349,7 @@
 <a href="https://space.bilibili.com/4469715"><img src="items/bilibili.png" /></a>
 </p>
 
-<p>最后更新 2019-04-22</p>
+<p>最后更新 2019-04-25</p>
 </footer>
 </article>
 </body></html>
