--- a/1.8.html
+++ b/1.8.html
@@ -47,15 +47,7 @@
 <!-------------------------------------------------------------------------------------------------->
 <h2 id="introduction">简介</h2>
 <p id="introduction">🎉欢迎来到《更多的合成》<span  style="color:red;">旧版百科</span>！</p>
-
-<p>原版模组一般是指使用命令而非<abbr title="forge liteloader rift fibric 等">mod api</abbr>来对游戏的可玩性做出修改。自1.13起，原版模组一般以数据包的形式出现。</p>
-
-<p>《更多的合成》是国内论坛最大的原版模组，包括数百种物品、材料、工具、装饰等，以及新的村民交易和空岛系统。该模组无明确的主题，凡是作者认为原版没有而应该有的特性都有可能加入进来。</p>
-<p>最新版本为测试版v1.9-m04d15(魔法更新)，支持Minecraft Java版 1.14快照19w12a+。</p>
-
-
-<h3 id="download">📦 下载地址</h3>
-<p>本页面所列内容为1.9测试版本。不建议玩家使用旧版本，同时新版本放出后，旧版本一律不再更新和修复bug。</p>
+<p>本页面所列内容为1.8.4版本。不建议玩家使用旧版本，同时新版本放出后，旧版本一律不再更新和修复bug。</p>
 <ul>
 	<li><a href="http://home.ustc.edu.cn/~zsxqq/craftingpp">官方主页</a></li>
 	<li><a href="http://www.mcbbs.net/thread-696861-1-1.html">mcbbs中文论坛页面</a></li>
@@ -63,23 +55,8 @@
 	<li><a href="https://github.com/ruhuasiyu/CraftingPlusPlus">github 页面</a></li>
 </ul>
 
-<p>本页面所列内容为1.8版本。不建议玩家使用旧版本，同时新版本放出后，旧版本一律不再更新和修复bug。</p>
-
 <table><thead><tr><th>支持的minecraft版本</th><th>Crafting++版本</th><th>下载地址</th><th>更新日志</th></tr></thead>
 <tbody>
-<tr>
-	<td>Minecraft Java版 1.14</td>
-	<td>Crafting++ 1.9</td>
-	<td>尚未发布</td>
-	<td><a href="https://github.com/ruhuasiyu/CraftingPlusPlus/raw/master/versions/1.9/change.log">更新日志</a></td>
-</tr>
-<tr>
-	<td>Minecraft Java版 19w12a+</td>
-	<td>Crafting++ 1.9测试版m04d15</td>
-	<td><a href="https://github.com/ruhuasiyu/CraftingPlusPlus/releases/download/v1.9m04d15/v1.9m04d15.zip">github</a>
-	  | <a href="http://home.ustc.edu.cn/~zsxqq/craftingpp/v1.9-m04d15.zip">官方</a></td>
-	<td><a href="https://github.com/ruhuasiyu/CraftingPlusPlus/commits/master">更新日志</a></td>
-</tr>
 <tr>
 	<td>Minecraft Java版 1.13.1-1.13.2</td>
 	<td>Crafting++ 1.8.4</td>
@@ -90,7 +67,7 @@
 </tbody></table>
 
 <p>下载后，将解压缩后的<code>datapacks</code>文件夹和<code>resources.zip</code>放入<code>.minecraft/saves/世界名</code>文件夹，然后进入游戏并按下F3+T或退出世界重进即可。如需安装在服务器类似操作，请设置为自动下载资源包，客户端无需安装数据包。</p>
-<p>涉及模组特有物品均需使用<a href="#crafting_machine"><img src="items/crafting_machine.png" style="height:20px;" />合成器</a>来合成。</p>
+<p>涉及模组特有物品均需使用<a href="#crafting_machine">合成器</a>来合成。</p>
 <p><a href="#block_sky_domain">空岛模块</a>默认不开启，玩家可由自定义超平坦如<code>minecraft:air;minecraft:mountains;</code>并重复上述操作安装。</p>
 <p>模组部分参数可通过修改<a href="#config">配置文件</a>datapacks/craftingpp/data/cpp/functions/config.mcfunction修改。</p>
 
