--- a/index.html
+++ b/index.html
@@ -73,7 +73,8 @@
 	<td>Minecraft Java版 1.13.1-1.13.2</td>
 	<td>Crafting++ 1.8.4</td>
 	<td><a href="https://github.com/ruhuasiyu/CraftingPlusPlus/releases/tag/v1.8.4">github</a>
-	  | <a href="http://home.ustc.edu.cn/~zsxqq/craftingpp/v1.8.4.zip">官方</a></td>
+	  | <a href="http://home.ustc.edu.cn/~zsxqq/craftingpp/v1.8.4.zip">官方</a>
+	  | <a href="http://home.ustc.edu.cn/~zsxqq/craftingpp/1.8.html">网页介绍</a></td>
 </tr>
 </tbody></table>
 
