--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="zh-cmn-Hans">
 <head>
 <meta charset="utf-8" />
-<title>更多的合成 Crafting++ v1.9</title>
+<title>更多的合成 Crafting++ v1.9.1</title>
 <meta name='author' content='ruhuasiyu@mcbbs' />
 <meta name='keywords' content='minecraft, 原版模组, vanilla mod, datapacks, Crafting++' />
 <meta name='description' content='Minecraft 原版模组 更多的合成' />
@@ -35,7 +35,7 @@
 	<li><a href="#trade">交易</a></li>
 	<li><a href="#block_sky_domain">空岛</a></li>
 	<li><a href="#advancements">进度</a></li>
-	<li><a href="https://github.com/ruhuasiyu/CraftingPlusPlus/blob/master/versions/1.9/change.log">日志</a></li>
+	<li><a href="https://github.com/ruhuasiyu/CraftingPlusPlus/releases/tag/v1.9.1">日志</a></li>
 </ul>
 </nav>
 <div class="banner" style="margin-top:44px">
@@ -49,11 +49,11 @@
 <p style="color:red">🎉欢迎来到原版模组《更多的合成》主页！</p>
 <p>原版模组一般是指使用命令而非<abbr title="forge liteloader rift fibric 等">mod api</abbr>来对游戏的可玩性做出修改。自1.13起，原版模组一般以数据包的形式出现。</p>
 <p>《更多的合成》是国内论坛最大的原版模组，包括数百种物品、材料、工具、装饰等，以及新的村民交易和空岛系统。</p>
-<p>最新版本为v1.9，即“魔法更新”，于2019年4月30日发布。该版本开始支持Minecraft 1.14版本。此次更新添加了魔杖的魔法效果，对大量模组物品和方块材质进行了重新绘制，同时也添加了很多实用工具、食物、装饰和药水。具体来说，加入了物品处理机、剪枝器、玻璃镐、搬箱器、垃圾桶、旗帜、标志、汉堡、披萨、寿司、仰望星空派、水果、葡萄干等，以及重新设计花草和空岛。此次更新也加入了获取物品的便捷方式，优化了大量指令，加入了很多可自动化的内容。</p>
+<p>最新版本为v1.9.1，于2019年5月3日发布。1.9版本起开始支持Minecraft 1.14版本。此次更新添加了魔杖的魔法效果，对大量模组物品和方块材质进行了重新绘制，同时也添加了很多实用工具、食物、装饰和药水。具体来说，加入了物品处理机、剪枝器、玻璃镐、搬箱器、垃圾桶、旗帜、标志、汉堡、披萨、寿司、仰望星空派、水果、葡萄干等，以及重新设计花草和空岛。此次更新也加入了获取物品的便捷方式，优化了大量指令，加入了很多可自动化的内容。</p>
 
 
 <h3 id="download">📦 下载地址</h3>
-<p>本页面所列内容为1.9版本。不建议玩家使用旧版本，同时新版本放出后，旧版本一律不再更新和修复bug。</p>
+<p>本页面所列内容为1.9.1版本。不建议玩家使用旧版本，同时新版本放出后，旧版本一律不再更新和修复bug。</p>
 <ul>
 	<li><a href="http://home.ustc.edu.cn/~zsxqq/craftingpp">官方主页</a></li>
 	<li><a href="http://www.mcbbs.net/thread-696861-1-1.html">mcbbs中文论坛页面</a></li>
@@ -65,9 +65,9 @@
 <tbody>
 <tr>
 	<td>Minecraft Java版 1.14</td>
-	<td>Crafting++ 1.9</td>
-	<td><a href="https://github.com/ruhuasiyu/CraftingPlusPlus/releases/tag/v1.9">github</a>
-	  | <a href="http://home.ustc.edu.cn/~zsxqq/craftingpp/v1.9.zip">官方</a></td>
+	<td>Crafting++ 1.9.1</td>
+	<td><a href="https://github.com/ruhuasiyu/CraftingPlusPlus/releases/tag/v1.9.1">github</a>
+	  | <a href="http://home.ustc.edu.cn/~zsxqq/craftingpp/v1.9.1.zip">官方</a></td>
 </tr>
 <tr>
 	<td>Minecraft Java版 1.13.1-1.13.2</td>
@@ -80,7 +80,8 @@
 
 <h3 id="how_to_start">🚀 如何开始</h3>
 <p>下载后，将解压缩后的<code>datapacks</code>文件夹和<code>resources.zip</code>放入<code>.minecraft/saves/世界名</code>文件夹。安装完成后进入游戏即可。</p>
-<p>服务端的操作类似，请设置server.properties中resource-pack=home.ustc.edu.cn/~zsxqq/craftingpp/resources.zip，每次更新时请重新计算resource-pack-sha1；或者让玩家自行下载资源包。客户端无需安装数据包。</p>
+<p>服务端的操作类似，请设置server.properties中resource-pack=home.ustc.edu.cn/~zsxqq/craftingpp/resources.zip，每次更新时请重新计算resource-pack-sha1；或者让玩家自行下载资源包。客户端无需安装数据包。若资源包加载太慢或有其它问题，可让玩家自行下载到本地后选择。</p>
+<p>服主或管理员可使用命令<code>/loot give @s loot cpp:物品英文名</code>来获取模组的物品，物品英文名为小写，空格转为下划线。例如使用命令<code>/loot give @s loot cpp:all_in_one_machine</code>可获得多功能一体机。</p>
 <p>广告：欢迎加入挼苹果服，QQ群号885244850。</p>
 
 <h4>模组入门</h4>
@@ -135,7 +136,6 @@
 · <a href="#sort_chest">箱子整理</a>
 · <a href="#dispenser_plant">自动种植</a>
 · <a href="#vertical_blocks">竖纹方块</a>
-· <a href="#vertical_slabs">竖台阶</a>
 · <a href="#nether_dry_wet_sponge">干燥湿海绵</a>
 </td></tr>
 
@@ -512,7 +512,7 @@
 <img style="height:250px" src="items/screenshots/dark_animals.png" />
 
 
-<h3 id="villager">村民</h3>
+<h3 id="villager">村民和流浪商人</h3>
 <p>可被附近手持绿宝石块的玩家吸引。</p>
 <p>死亡时掉落<code>掉落1~(2+抢夺等级)</code>绿宝石，被玩家杀死时掉落3点经验值。</p>
 <img style="height:250px" src="items/screenshots/rare_drops.png" />
@@ -1095,6 +1095,16 @@
 </tr>
 
 <tr>
+	<td rowspan="2"><span class="ui single"><span class="ci green_hat" title="绿色水之力"></span></span></td>
+	<td><span class="ui single"><span class="glass_bottle" title="玻璃瓶"></span></span></td>
+	<td><span class="ui single"><span class="water_bottle" title="水瓶"></span></span></td>
+</tr>
+<tr>
+	<td><span class="ui single"><span class="bucket" title="桶"></span></span></td>
+	<td><span class="ui single"><span class="water_bucket" title="水桶"></span></span></td>
+</tr>
+
+<tr>
 	<td><span class="ui single"><span class="grass_block" title="草方块"></span></span></td>
 	<td><span class="ui single"><span class="dirt" title="泥土"></span></span></td>
 	<td><span class="ui single"><span class="grass_block" title="草方块"></span></span></td>
@@ -1103,6 +1113,12 @@
 	<td><span class="ui single"><span class="mycelium" title="菌丝"></span></span></td>
 	<td><span class="ui single"><span class="dirt" title="泥土"></span></span></td>
 	<td><span class="ui single"><span class="mycelium" title="菌丝"></span></span></td>
+</tr>
+
+<tr>
+	<td><span class="ui single"><span class="ci compressor" title="压缩器"></span></span></td>
+	<td>64个任意物品</td>
+	<td>1个64×物品</td>
 </tr>
 </tbody></table>
 
@@ -5350,7 +5366,7 @@
 <a href="https://space.bilibili.com/4469715"><img src="items/bilibili.png" /></a>
 </p>
 
-<p>最后更新 2019-04-25</p>
+<p>最后更新 2019-05-03</p>
 </footer>
 </article>
 </body></html>
