--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 </tbody></table>
 
 <h3 id="how_to_start">🚀 如何开始</h3>
-<p>下载后，将解压缩后的<code>datapacks</code>文件夹和<code>resources.zip</code>放入<code>.minecraft/saves/世界名</code>文件夹。安装完成后进入游戏即可。</p>
+<p>下载后，将解压缩后的<code>datapacks</code>文件夹和<code>resources.zip</code>放入<code>.minecraft/saves/世界名</code>文件夹，同时打开选项->语言->强制使用Unicode字体：关。安装完成后进入游戏即可。</p>
 <p>服务端的操作类似，请设置server.properties中resource-pack=home.ustc.edu.cn/~zsxqq/craftingpp/resources.zip，每次更新时请重新计算resource-pack-sha1；或者让玩家自行下载资源包。客户端无需安装数据包。若资源包加载太慢或有其它问题，可让玩家自行下载到本地后选择。</p>
 <p>服主或管理员可使用命令<code>/loot give @s loot cpp:物品英文名</code>来获取模组的物品，物品英文名为小写，空格转为下划线。例如使用命令<code>/loot give @s loot cpp:all_in_one_machine</code>可获得多功能一体机。</p>
 <p>广告：欢迎加入挼苹果服，QQ群号885244850。</p>
