--- a/index.html
+++ b/index.html
@@ -272,6 +272,7 @@
   <a href="#portable_crafting_table"><span class="ci" style="background-position: -0px -144px;"></span>便携式工作台</a> 
 · <a href="#portable_crafting_machine"><span class="ci" style="background-position: -80px -608px;"></span>便携式合成器</a> 
 · <a href="#dustbin"><span class="ci" style="background-position: -0px -720px;"></span>垃圾桶</a> 
+· <a href="#muffler"><span class="ci" style="background-position: -32px -720px;"></span>消音器</a> 
 · <a href="#magnet"><span class="ci" style="background-position: -16px -144px;"></span>磁铁</a> 
 · <a href="#time_checker"><span class="ci" style="background-position: -48px -144px;"></span>报时器</a> 
 · <a href="#time_conditioner"><span class="ci" style="background-position: -32px -144px;"></span>时间调节器</a> 
