--- a/index.html
+++ b/index.html
@@ -4849,7 +4849,7 @@
 <span class="ui single"><span class="ci character28"></span></span>
 <span class="ui single"><span class="ci character29"></span></span>
 <span class="ui single"><span class="ci character30"></span></span>
-<p>对床shift右键即可使用，共27种样式。从<a href="#trade">圣诞老人村民</a>处购买圣诞礼物有几率得到。包括：樱之宫莓香、日向夏帆、星川麻冬、天野美雨、神崎日照、鹿目圆香、晓美焰、美树沙耶香、巴麻美、佐仓杏子、篝敦子、洛蒂·杨森、苏西·曼芭芭拉、夏莉欧·杜诺尔、春风DoReMi、藤原羽月、妹尾爱子、木之本樱、小起、宫永咲、原村和、片冈优希、染谷真子、竹井久、龙门渕透华、天江衣、福路美穗子、濑川音符、飞鸟桃子、卷机山花。</p>
+<p>对床shift右键即可使用，共30种样式。从<a href="#trade">圣诞老人村民</a>处购买圣诞礼物有几率得到。包括：樱之宫莓香、日向夏帆、星川麻冬、天野美雨、神崎日照、鹿目圆香、晓美焰、美树沙耶香、巴麻美、佐仓杏子、篝敦子、洛蒂·杨森、苏西·曼芭芭拉、夏莉欧·杜诺尔、春风DoReMi、藤原羽月、妹尾爱子、木之本樱、小起、宫永咲、原村和、片冈优希、染谷真子、竹井久、龙门渕透华、天江衣、福路美穗子、濑川音符、飞鸟桃子、卷机山花。</p>
 
 <h3 id="colorful_sign">彩色告示牌 (Colorful Sign)</h3>
 <span class="ui single"><span class="ci white_sign"></span></span>
@@ -5128,7 +5128,7 @@
 <!------------------------------------------------------------------------------------------------->
 <h2 id="block_sky_domain">空域开端</h2>
 <p>
-该数据包仅在出生点y=0处无方块情形下启用，玩家可由自定义超平坦如<code>minecraft:air;minecraft:mountains;</code>进入。</p>
+该数据包仅在出生点y=0处无基岩情形下启用，玩家可由自定义超平坦如<code>minecraft:air;minecraft:mountains;</code>进入。</p>
 <p>若要在非空岛模式下开启该模块，输入<code>scoreboard players set #load_block_sky_domain cppValue 1</code>并重新加载即可。</p>
 <p>若要在空岛模式下关闭该模块，依次输入<code>scoreboard players set #load_block_sky_domain cppValue 0</code>并重新加载即可。</p>
 <p>该数据包旨在为空岛玩家提供从泥土到末地的完整科技链。加载后会生成一块基岩和一个箱子，箱子内包含1泥土、1橡树树苗、16骨粉。</p>
