--- a/index.html
+++ b/index.html
@@ -3293,7 +3293,7 @@
 <span class="ui single"><span class="ci golem_fisher"></span></span>
 <span class="ui single"><span class="ci golem_warrior"></span></span>
 <span class="ui single"><span class="ci golem_herder"></span></span>
-<p>傀儡用于合成</p>
+<p>傀儡用于合成。如果合成手时使用了带有魔咒的工具，魔咒最终会转移到傀儡上。</p>
 <ul>
 <li><strong id="golem_farmer">傀儡农民 (Golem Farmer)</strong>：破坏接触的<abbr title="树叶、木头、西瓜、南瓜、蘑菇方块、甘蔗、竹子">农业方块</abbr>、成熟的<abbr title="小麦、甜菜根、胡萝卜、马铃薯、甜浆果丛">作物</abbr>并补种。</li>
 <li><strong id="golem_miner">傀儡矿工 (Golem Miner)</strong>：破坏接触的除控制方块外的所有方块。支持时运和精准采集魔咒。</li>
@@ -5128,7 +5128,7 @@
 <!------------------------------------------------------------------------------------------------->
 <h2 id="block_sky_domain">空域开端</h2>
 <p>
-该数据包仅在出生点y=0处无基岩情形下启用，玩家可由自定义超平坦如<code>minecraft:air;minecraft:mountains;</code>进入。</p>
+该数据包仅在出生点y=0处为空气情形下启用，玩家可由自定义超平坦如<code>minecraft:air;minecraft:mountains;</code>进入。</p>
 <p>若要在非空岛模式下开启该模块，输入<code>scoreboard players set #load_block_sky_domain cppValue 1</code>并重新加载即可。</p>
 <p>若要在空岛模式下关闭该模块，依次输入<code>scoreboard players set #load_block_sky_domain cppValue 0</code>并重新加载即可。</p>
 <p>该数据包旨在为空岛玩家提供从泥土到末地的完整科技链。加载后会生成一块基岩和一个箱子，箱子内包含1泥土、1橡树树苗、16骨粉。</p>
