--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 	<li><a href="#trade">交易</a></li>
 	<li><a href="#block_sky_domain">空岛</a></li>
 	<li><a href="#advancements">进度</a></li>
-	<li><a href="https://github.com/ruhuasiyu/CraftingPlusPlus/releases/tag/v1.9.5">日志</a></li>
+	<li><a href="https://github.com/ruhuasiyu/CraftingPlusPlus/releases/tag/v1.9.6">日志</a></li>
 </ul>
 </nav>
 <div class="banner" style="margin-top:44px">
@@ -49,7 +49,7 @@
 <p style="color:red">🎉欢迎来到原版模组《更多的合成》主页！</p>
 <p>原版模组一般是指使用命令而非<abbr title="forge liteloader rift fibric 等">mod api</abbr>来对游戏的可玩性做出修改。自1.13起，原版模组一般以数据包的形式出现。</p>
 <p>《更多的合成》是国内论坛最大的原版模组，包括数百种物品、材料、工具、装饰等，以及新的村民交易和空岛系统。</p>
-<p>最新正式版本为v1.9.5，于2019年6月25日发布，支持Minecraft 1.14版本。此次更新添加了魔杖的魔法效果，对大量模组物品和方块材质进行了重新绘制，同时也添加了很多实用工具、食物、装饰和药水。具体来说，加入了物品处理机、剪枝器、玻璃镐、搬箱器、垃圾桶、旗帜、标志、汉堡、披萨、寿司、仰望星空派、水果、葡萄干等，以及重新设计了花草、头颅和空岛。此次更新也加入了获取物品的便捷方式，优化了大量指令，加入了很多可自动化的内容。</p>
+<p>最新正式版本为v1.9.6，于2019年6月25日发布，支持Minecraft 1.14版本。此次更新添加了魔杖的魔法效果，对大量模组物品和方块材质进行了重新绘制，同时也添加了很多实用工具、食物、装饰和药水。具体来说，加入了物品处理机、剪枝器、玻璃镐、搬箱器、垃圾桶、旗帜、标志、汉堡、披萨、寿司、仰望星空派、水果、葡萄干等，以及重新设计了花草、头颅和空岛。此次更新也加入了获取物品的便捷方式，优化了大量指令，加入了很多可自动化的内容。</p>
 <p>本模组即将完结，以后应该只会修复bug和优化内容，不会再有大的更新。如遇到Minecraft命令机制大改或新生物等内容，我还是会及时更新代码并支持新的内容。感谢大家一直以来的支持和帮助！</p>
 
 <h3 id="download">📦 下载地址</h3>
@@ -70,6 +70,8 @@
 	  | <a href="http://home.ustc.edu.cn/~zsxqq/craftingpp/v1.9.6.zip">官方</a></td>
 </tr>
 </tbody></table>
+
+旧版本请<a href="https://github.com/ruhuasiyu/CraftingPlusPlus/releases/tag">点击此处查看</a>。
 
 <h3 id="how_to_start">🚀 如何开始</h3>
 <p>下载后解压缩。</p>
@@ -1523,7 +1525,7 @@
 <span class="ui single"><span class="ci chest_dropper"></span></span>
 <p>输入到其中的物品会从下方漏出。</p>
 <table><thead><tr><th>产物</th><th>材料</th><th>合成配方</th></tr></thead><tbody>
-<tr><th>箱漏</th><td>铁锭+燧石+湿海绵</td>
+<tr><th>箱漏</th><td>木桶+漏斗+投掷器</td>
 <td><span class="ui cm" title="合成器">
 <span class="empty"></span>
 <span class="barrel" title="木桶"></span>
